# pyrodigal-gv

./: .gitattributes  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
pkg/aur/: PKGBUILD.in
pyrodigal_gv/: __init__.py  __main__.py  cli.py  meta.py
pyrodigal_gv/tests/: __init__.py  phage_Agate.faa  phage_Agate.fna  phage_Agate.scores.txt  phage_Topaz.faa  phage_Topaz.fna  phage_Topaz.scores.txt  requirements.txt  test_gene_finder.py
